# Ignition-ROS2-Plugin-Templete

./: README.md
ign_plugin/: CMakeLists.txt  package.xml
ign_plugin/src/: ignition_plugin.cpp
