<?xml version="1.0"?>
<package format="3">
  <name>ign_plugin</name>
  <version>0.4.0</version>
  <description>Ignition ROS2 Plugin Template</description>
  <maintainer email="micahel1015999@gmail.com">Minsik Oh</maintainer>
  <author>Minsik Oh</author>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <!-- default version to use in official ROS2 packages is Ignition Fortress for ROS2 Rolling -->
  <depend condition="$IGNITION_VERSION == ''">ignition-gazebo6</depend>
  <depend condition="$IGNITION_VERSION == citadel">ignition-gazebo3</depend>
  <depend condition="$IGNITION_VERSION == edifice">ignition-gazebo5</depend>
  <depend condition="$IGNITION_VERSION == fortress">ignition-gazebo6</depend>
  <depend>ignition-plugin</depend>
  <depend>pluginlib</depend>

  <depend>yaml_cpp_vendor</depend>
  <depend>rclcpp_lifecycle</depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
      <!-- <ign_plugin plugin="${prefix}/ign_hardware_plugins.xml"/> -->
  </export>
</package>
